--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -23,7 +23,7 @@
 </div>
 <div id="bhs_header">
     <div class="bhs_headerWrap">
-        <h1><a href="#"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
+        <h1><a href="index.html"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
         <div id="bhs_header_aside" class="clearfix">
             <div class="bhs_header_aside_sns">
                 <ul>
@@ -35,9 +35,9 @@
                             </ul>
                         </form>
                     </li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
                     <li class="bhs_header_aside_lang_en"><a href="#"><p><span>Login(VIP)</span></p></a></li>
                 </ul>
             </div>
@@ -51,14 +51,14 @@
             <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">GUNPLA</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Metal Build</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">EVENT</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_hos"><a href="#"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
         </ul>
     </div>
 </div>
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
-            <li class="home"><a href="#">home</a></li>
+            <li class="home"><a href="index.html">home</a></li>
             <li><a href="#">GUNPLA</a></li>
             <li>HG [High grade]</li>
         </ul>
@@ -77,7 +77,7 @@
                 <table id="release">
                     <tbody>
                         <tr>
-                            <td><a href="#" target="_blank"><img src="img/hg_advanced_gnx.jpg" width="100%"></a></td>
+                            <td><a href="#"><img src="img/hg_advanced_gnx.jpg" width="100%"></a></td>
                             <td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>
                         </tr>
                         <tr>
@@ -156,7 +156,7 @@
                 </ul>
                 <ol class="bhs_pdlist_sbs">
                     <li>
-                        <a href="#">
+                        <a href="item_3244.html" target="_blank">
                             <img src="img/hg_phenex.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
