--- a/item_3244.html
+++ b/item_3244.html
@@ -23,7 +23,7 @@
 </div>
 <div id="bhs_header">
     <div class="bhs_headerWrap">
-        <h1><a href="#"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
+        <h1><a href="index.html"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
         <div id="bhs_header_aside" class="clearfix">
             <div class="bhs_header_aside_sns">
                 <ul>
@@ -35,9 +35,9 @@
                             </ul>
                         </form>
                     </li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
                     <li class="bhs_header_aside_lang_en"><a href="#"><p><span>Login(VIP)</span></p></a></li>
                 </ul>
             </div>
@@ -51,16 +51,16 @@
             <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">GUNPLA</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Metal Build</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">EVENT</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_hos"><a href="#"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
         </ul>
     </div>
 </div>
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
-            <li class="home"><a href="#">home</a></li>
+            <li class="home"><a href="index.html">home</a></li>
             <li><a href="#">GUNPLA</a></li>
-            <li><a href="#">HG [High grade]</a></li>
+            <li><a href="gunpla_hg_list.html">HG [High grade]</a></li>
             <li>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</li>
         </ul>
     </div>
