--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <div class="rightPic">
         <div class="bhs_loginPanel">
             <div class="bhs_login_esc">×</div>
-            <input class="bhs_login_uname" type="text" placeholder="User Name"><br>
-            <input class="bhs_login_upwd" type="password" placeholder="User Password"><br>
+            <input class="bhs_login_uname" type="text" placeholder="User Name">
+            <input class="bhs_login_upwd" type="password" placeholder="User Password">
+            <button class="bhs_login_btn">Login</button>
+            <button class="bhs_register_btn">Register</button>
         </div>
     </div>
     <span class="blingbling"></span>
@@ -36,14 +38,14 @@
                     <li class="bhs_header_aside_search">
                         <form action="#" method="get">
                             <ul>
-                                <li class="bhs_header_aside_search_txt"><input type="text" value="" name="#" placeholder="Please enter product name"></li>
+                                <li class="bhs_header_aside_search_txt"><input type="text" name="#" placeholder="Please enter product name"></li>
                                 <li class="bhs_header_aside_search_btn"><input type="submit" value="Search"></li>
                             </ul>
                         </form>
                     </li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
+                    <li><a href="#"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
                     <li class="bhs_header_aside_lang_en"><a href="#"><p><span>Login(VIP)</span></p></a></li>
                 </ul>
             </div>
@@ -57,7 +59,7 @@
             <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">GUNPLA</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Metal Build</span></span></h2></a></li>
             <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">EVENT</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_hos"><a href="#"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
         </ul>
     </div>
 </div>
@@ -177,7 +179,7 @@
             <div id="bhs_side_gunpla">
                 <h3 class="bhs_title clearfix"><span>GUNPLA</span></h3>
                 <ul class="logoList">
-                    <li><a href="#"></a></li>
+                    <li><a href="gunpla_hg_list.html" target="_blank"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
@@ -201,7 +203,7 @@
                 <h2 class="bhs_main_title"><span>NEWS</span></h2>
                 <ul>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/mg_f90.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gundam F90 [2nd: Sep 2019 shipment]</p>
@@ -209,7 +211,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/mg_f90_e&s.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gundam F90 / Mission pack E type & S type [2nd: Sep 2019 shipment]</p>
@@ -217,7 +219,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/hg_gustav_carl_girlen.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
                             <p class="bhs_info_txt">HG 1/144 Gustav Carle (Girlen's Ambition Ver.)</p>
@@ -225,7 +227,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/rg_sazabi_special_coating.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
                             <p class="bhs_info_txt">RG 1/144 Sazabi [special coating]</p>
@@ -233,7 +235,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/mg_li_gazsy_custom.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.10</span></p>
                             <p class="bhs_info_txt">MG 1/100 Li Gazsy Custom</p>
@@ -241,7 +243,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/mg_gym_cold_area.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gym (Cold Area Specifications)</p>
@@ -249,7 +251,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/mg_jim_sniper_II_Lido_Wolf.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
                             <p class="bhs_info_txt">MG 1/100 Jim Sniper II (Lido Wolf machine)</p>
@@ -257,7 +259,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/re_gun_eiji_land_battle.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
                             <p class="bhs_info_txt">RE / 100 1/100 Gun Eiji Land Battle Type</p>
@@ -265,7 +267,7 @@
                         </a>
                     </li>
                     <li class="clearfix">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <p class="bhs_info_img"><img src="img/rg_gundam_astray_gold_frame_heaven_hana.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
                             <p class="bhs_info_txt">RG 1/144 Gundam Astray Gold Frame Heaven (Amatsu) Hana</p>
