--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
             <input class="bhs_login_uname" type="text" placeholder="User Name">
             <input class="bhs_login_upwd" type="password" placeholder="User Password">
             <button class="bhs_login_btn">Login</button>
+            <button class="bhs_toRegister_btn">Register>>></button>
+        </div>
+        <div class="bhs_registerPanel">
+            <div class="bhs_register_esc">×</div>
+            <input class="bhs_register_uname" type="text" placeholder="User Name">
+            <span class="tips_uname">User name:8~12</span>
+            <input class="bhs_register_upwd" type="password" placeholder="User Password">
+            <span class="tips_upwd">User password:6~12</span>
+            <input class="bhs_register_confirm" type="password" placeholder="Password Confirm">
+            <span class="tips_confirm">Confirm password</span>
+            <input class="bhs_register_email" type="text" placeholder="User Email">
+            <span class="tips_email"></span>
+            <input class="bhs_register_phone" type="text" placeholder="User Phone">
+            <span class="tips_phone"></span>
             <button class="bhs_register_btn">Register</button>
+            <button class="bhs_toLogin_btn">Login>>></button>
         </div>
     </div>
     <span class="blingbling"></span>
