--- a/item_3244.html
+++ b/item_3244.html
@@ -18,7 +18,25 @@
 <body>
 <div id="loading">
     <div class="leftPic"></div>
-    <div class="rightPic"></div>
+    <div class="rightPic">
+        <div class="bhs_loginPanel">
+            <div class="bhs_login_esc">×</div>
+            <input class="bhs_login_uname" type="text" placeholder="User Name">
+            <input class="bhs_login_upwd" type="password" placeholder="User Password">
+            <button class="bhs_login_btn">Login</button>
+            <button class="bhs_toRegister_btn">Register>>></button>
+        </div>
+        <div class="bhs_registerPanel">
+            <div class="bhs_register_esc">×</div>
+            <input class="bhs_register_uname" type="text" placeholder="User Name">
+            <input class="bhs_register_upwd" type="password" placeholder="User Password">
+            <input class="bhs_register_confirm" type="password" placeholder="Password Confirm">
+            <input class="bhs_register_email" type="text" placeholder="User Email">
+            <input class="bhs_register_phone" type="text" placeholder="User Phone">
+            <button class="bhs_register_btn">Register</button>
+            <button class="bhs_toLogin_btn">Login>>></button>
+        </div>
+    </div>
     <span class="blingbling"></span>
 </div>
 <div id="bhs_header">
