--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="bhs_registerPanel">
             <div class="bhs_register_esc">×</div>
             <input class="bhs_register_uname" type="text" placeholder="User Name">
-            <span class="tips_uname">User name:8~12</span>
+            <span class="tips_uname"></span>
             <input class="bhs_register_upwd" type="password" placeholder="User Password">
-            <span class="tips_upwd">User password:6~12</span>
+            <span class="tips_upwd"></span>
             <input class="bhs_register_confirm" type="password" placeholder="Password Confirm">
-            <span class="tips_confirm">Confirm password</span>
+            <span class="tips_confirm"></span>
             <input class="bhs_register_email" type="text" placeholder="User Email">
             <span class="tips_email"></span>
             <input class="bhs_register_phone" type="text" placeholder="User Phone">
@@ -222,7 +222,7 @@
                             <p class="bhs_info_img"><img src="img/mg_f90.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gundam F90 [2nd: Sep 2019 shipment]</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 5600</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -230,7 +230,7 @@
                             <p class="bhs_info_img"><img src="img/mg_f90_e&s.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gundam F90 / Mission pack E type & S type [2nd: Sep 2019 shipment]</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 3200</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -238,7 +238,7 @@
                             <p class="bhs_info_img"><img src="img/hg_gustav_carl_girlen.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
                             <p class="bhs_info_txt">HG 1/144 Gustav Carle (Girlen's Ambition Ver.)</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 2800</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -246,7 +246,7 @@
                             <p class="bhs_info_img"><img src="img/rg_sazabi_special_coating.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
                             <p class="bhs_info_txt">RG 1/144 Sazabi [special coating]</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 3500</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -254,7 +254,7 @@
                             <p class="bhs_info_img"><img src="img/mg_li_gazsy_custom.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.10</span></p>
                             <p class="bhs_info_txt">MG 1/100 Li Gazsy Custom</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 4600</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -262,7 +262,7 @@
                             <p class="bhs_info_img"><img src="img/mg_gym_cold_area.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
                             <p class="bhs_info_txt">MG 1/100 Gym (Cold Area Specifications)</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 4500</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -270,7 +270,7 @@
                             <p class="bhs_info_img"><img src="img/mg_jim_sniper_II_Lido_Wolf.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
                             <p class="bhs_info_txt">MG 1/100 Jim Sniper II (Lido Wolf machine)</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 3800</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -278,7 +278,7 @@
                             <p class="bhs_info_img"><img src="img/re_gun_eiji_land_battle.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
                             <p class="bhs_info_txt">RE / 100 1/100 Gun Eiji Land Battle Type</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 4200</p>
                         </a>
                     </li>
                     <li class="clearfix">
@@ -286,7 +286,7 @@
                             <p class="bhs_info_img"><img src="img/rg_gundam_astray_gold_frame_heaven_hana.jpg"></p>
                             <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
                             <p class="bhs_info_txt">RG 1/144 Gundam Astray Gold Frame Heaven (Amatsu) Hana</p>
-                            <p class="bhs_info_price">&yen;</p>
+                            <p class="bhs_info_price">&yen; 3200</p>
                         </a>
                     </li>
                 </ul>
@@ -392,5 +392,6 @@
     </div>
 </div>
 <script src="js/hbs_js.js"></script>
+<script src="js/hbs_check.js"></script>
 </body>
 </html>
