--- a/item_3244.html
+++ b/item_3244.html
@@ -29,10 +29,15 @@
         <div class="bhs_registerPanel">
             <div class="bhs_register_esc">×</div>
             <input class="bhs_register_uname" type="text" placeholder="User Name">
+            <span class="tips_uname"></span>
             <input class="bhs_register_upwd" type="password" placeholder="User Password">
+            <span class="tips_upwd"></span>
             <input class="bhs_register_confirm" type="password" placeholder="Password Confirm">
+            <span class="tips_confirm"></span>
             <input class="bhs_register_email" type="text" placeholder="User Email">
+            <span class="tips_email"></span>
             <input class="bhs_register_phone" type="text" placeholder="User Phone">
+            <span class="tips_phone"></span>
             <button class="bhs_register_btn">Register</button>
             <button class="bhs_toLogin_btn">Login>>></button>
         </div>
