--- a/item_3244.html
+++ b/item_3244.html
@@ -95,10 +95,10 @@
                 <h2 class="bhs_main_title"><span>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span></h2>
                 <div id="bhs_gallery">
                     <div id="bhs_gallery_main">
-                        <div class="bx-wrapper">
-                            <div class="bx-viewport">
-                                <span></span>
-                            </div>
+                        <div class="bx-wrapper"></div>
+                        <div class="bx-wrapper-mask"></div>
+                        <div class="bx-viewport">
+                            <img src="img/detail_3244_1.jpg">
                         </div>
                     </div>
                     <ul id="bhs_gallery_thumbs" class="clearfix">
