--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -100,7 +100,7 @@
                 <table id="release">
                     <tbody>
                         <tr>
-                            <td><a href="#"><img src="img/hg_advanced_gnx.jpg" width="100%"></a></td>
+                            <td><a href="#"><img src="img/hg/banner/hg_advanced_gnx.jpg" width="100%"></a></td>
                             <td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>
                         </tr>
                         <tr>
@@ -180,7 +180,7 @@
                 <ol class="bhs_pdlist_sbs">
                     <li>
                         <a href="item_3244.html" target="_blank">
-                            <img src="img/hg_phenex.jpg" style="margin-top: -170px">
+                            <img src="img/hg/hg_phenex.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
                                 <span class="bhs_pd_price">Price: 5,400 yen (including tax 8%)</span>
@@ -190,7 +190,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_gustav_carl_girlen.jpg">
+                            <img src="img/hg/hg_gustav_carl_girlen.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 Gustav Karl (Gyren's Ambition Ver.)</span>
                                 <span class="bhs_pd_price">Price: 2,592 yen (including tax 8%)</span>
@@ -201,7 +201,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_destiny_heine.jpg" style="margin-top: -170px">
+                            <img src="img/hg/hg_destiny_heine.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGCE 1/144 DESTINY GUNDAM (HEINE WESTENFLUSS CUSTOM)</span>
                                 <span class="bhs_pd_price">Price: 2,376 yen (8% tax included)</span>
@@ -211,7 +211,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_silver_bullet.jpg" style="margin-top: -170px">
+                            <img src="img/hg/hg_silver_bullet.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 SILVER BULLET SUPPRESSOR</span>
                                 <span class="bhs_pd_price">Price: 2,916 yen (including tax 8%)</span>
@@ -221,7 +221,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_zaku_cannon.jpg">
+                            <img src="img/hg/hg_zaku_cannon.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 Zaku Cannon</span>
                                 <span class="bhs_pd_price">Price: 2,376 yen (8% tax included)</span>
@@ -232,7 +232,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_Gparts_actual_deployment.jpg">
+                            <img src="img/hg/hg_Gparts_actual_deployment.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 G Parts [Furudo] (actual deployment color)</span>
                                 <span class="bhs_pd_price">Price: 1,188 yen (including tax 8%)</span>
@@ -243,7 +243,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_gundam_tr1_tr6.jpg">
+                            <img src="img/hg/hg_gundam_tr1_tr6.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 Gundam TR - 1 [Advanced Haze] &amp; Gundam TR - 6 Expansion Parts</span>
                                 <span class="bhs_pd_price">Price: 1,836 yen (8% tax included)</span>
@@ -254,7 +254,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_double_o_clear.jpg">
+                            <img src="img/hg/hg_double_o_clear.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HGBD 1/144 Gundam Double Ocean [Dive Into Dimension Clear]</span>
                                 <span class="bhs_pd_price">Price: 1,620 yen (8% tax included)</span>
@@ -265,7 +265,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_Gparts.jpg">
+                            <img src="img/hg/hg_Gparts.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 G Parts [Furudo]</span>
                                 <span class="bhs_pd_price">Price: 1,188 yen (including tax 8%)</span>
@@ -276,7 +276,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_gundam_tr1_extended.jpg">
+                            <img src="img/hg/hg_gundam_tr1_extended.jpg">
                             <p>
                                 <span class="bhs_pd_ttl">HG 1/144 Gundam TR - 1 [Haze - modified] &amp; extended parts for Gundam TR - 6</span>
                                 <span class="bhs_pd_price">Price: 1,620 yen (8% tax included)</span>
