--- a/item_3244.html
+++ b/item_3244.html
@@ -98,14 +98,14 @@
                         <div class="bx-wrapper"></div>
                         <div class="bx-wrapper-mask"></div>
                         <div class="bx-viewport">
-                            <img src="img/detail_3244_1.jpg">
+                            <img src="img/hg/detail/detail_3244_1.jpg">
                         </div>
                     </div>
                     <ul id="bhs_gallery_thumbs" class="clearfix">
-                        <li><a href="#"><span><img src="img/detail_3244_1.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/detail_3244_2.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/detail_3244_3.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/detail_3244_4.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_1.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>
                     </ul>
                     <div id="bhs_pd_ontline">
                         <table class="bhs_sale_table">
