--- a/public/index.html
+++ b/public/index.html
@@ -394,5 +394,6 @@
 <script src="js/hbs_instead.js"></script>
 <script src="js/hbs_js.js"></script>
 <script src="js/hbs_check.js"></script>
+<script src="js/hbs_index.js"></script>
 </body>
 </html>
