--- a/public/gunpla_hg_list.html
+++ b/public/gunpla_hg_list.html
@@ -179,7 +179,7 @@
                 </ul>
                 <ol class="bhs_pdlist_sbs">
                     <li>
-                        <a href="item_3244.html" target="_blank">
+                        <a href="item.html" target="_blank">
                             <img src="img/hg/hg_phenex.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
