--- a/public/index.html
+++ b/public/index.html
@@ -217,78 +217,78 @@
             <div id="bhs_news">
                 <h2 class="bhs_main_title"><span>NEWS</span></h2>
                 <ul>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/mg_f90.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
-                            <p class="bhs_info_txt">MG 1/100 Gundam F90 [2nd: Sep 2019 shipment]</p>
-                            <p class="bhs_info_price">&yen; 5600</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/mg_f90_e&s.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>
-                            <p class="bhs_info_txt">MG 1/100 Gundam F90 / Mission pack E type & S type [2nd: Sep 2019 shipment]</p>
-                            <p class="bhs_info_price">&yen; 3200</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/hg/hg_gustav_carl_girlen.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
-                            <p class="bhs_info_txt">HG 1/144 Gustav Carle (Girlen's Ambition Ver.)</p>
-                            <p class="bhs_info_price">&yen; 2800</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/rg_sazabi_special_coating.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>
-                            <p class="bhs_info_txt">RG 1/144 Sazabi [special coating]</p>
-                            <p class="bhs_info_price">&yen; 3500</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/mg_li_gazsy_custom.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.10</span></p>
-                            <p class="bhs_info_txt">MG 1/100 Li Gazsy Custom</p>
-                            <p class="bhs_info_price">&yen; 4600</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/mg_gym_cold_area.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
-                            <p class="bhs_info_txt">MG 1/100 Gym (Cold Area Specifications)</p>
-                            <p class="bhs_info_price">&yen; 4500</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/mg_jim_sniper_II_Lido_Wolf.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>
-                            <p class="bhs_info_txt">MG 1/100 Jim Sniper II (Lido Wolf machine)</p>
-                            <p class="bhs_info_price">&yen; 3800</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/re_gun_eiji_land_battle.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
-                            <p class="bhs_info_txt">RE / 100 1/100 Gun Eiji Land Battle Type</p>
-                            <p class="bhs_info_price">&yen; 4200</p>
-                        </a>
-                    </li>
-                    <li class="clearfix">
-                        <a href="#">
-                            <p class="bhs_info_img"><img src="img/rg_gundam_astray_gold_frame_heaven_hana.jpg"></p>
-                            <p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>
-                            <p class="bhs_info_txt">RG 1/144 Gundam Astray Gold Frame Heaven (Amatsu) Hana</p>
-                            <p class="bhs_info_price">&yen; 3200</p>
-                        </a>
-                    </li>
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/mg_f90.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>-->
+                            <!--<p class="bhs_info_txt">MG 1/100 Gundam F90 [2nd: Sep 2019 shipment]</p>-->
+                            <!--<p class="bhs_info_price">&yen; 5600</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/mg_f90_e&s.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.26</span></p>-->
+                            <!--<p class="bhs_info_txt">MG 1/100 Gundam F90 / Mission pack E type & S type [2nd: Sep 2019 shipment]</p>-->
+                            <!--<p class="bhs_info_price">&yen; 3200</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/hg/hg_gustav_carl_girlen.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>-->
+                            <!--<p class="bhs_info_txt">HG 1/144 Gustav Carle (Girlen's Ambition Ver.)</p>-->
+                            <!--<p class="bhs_info_price">&yen; 2800</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/rg_sazabi_special_coating.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.25</span></p>-->
+                            <!--<p class="bhs_info_txt">RG 1/144 Sazabi [special coating]</p>-->
+                            <!--<p class="bhs_info_price">&yen; 3500</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/mg_li_gazsy_custom.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.10</span></p>-->
+                            <!--<p class="bhs_info_txt">MG 1/100 Li Gazsy Custom</p>-->
+                            <!--<p class="bhs_info_price">&yen; 4600</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/mg_gym_cold_area.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>-->
+                            <!--<p class="bhs_info_txt">MG 1/100 Gym (Cold Area Specifications)</p>-->
+                            <!--<p class="bhs_info_price">&yen; 4500</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/mg_jim_sniper_II_Lido_Wolf.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.04.01</span></p>-->
+                            <!--<p class="bhs_info_txt">MG 1/100 Jim Sniper II (Lido Wolf machine)</p>-->
+                            <!--<p class="bhs_info_price">&yen; 3800</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/re_gun_eiji_land_battle.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>-->
+                            <!--<p class="bhs_info_txt">RE / 100 1/100 Gun Eiji Land Battle Type</p>-->
+                            <!--<p class="bhs_info_price">&yen; 4200</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="clearfix">-->
+                        <!--<a href="#">-->
+                            <!--<p class="bhs_info_img"><img src="img/rg_gundam_astray_gold_frame_heaven_hana.jpg"></p>-->
+                            <!--<p class="bhs_info_cd"><span class="bhs_info_new">New</span><span class="bhs_info_date">2019.03.26</span></p>-->
+                            <!--<p class="bhs_info_txt">RG 1/144 Gundam Astray Gold Frame Heaven (Amatsu) Hana</p>-->
+                            <!--<p class="bhs_info_price">&yen; 3200</p>-->
+                        <!--</a>-->
+                    <!--</li>-->
                 </ul>
                 <div class="bhs_main_btn_all"><a href="#"><span>View list</span></a></div>
             </div>
