--- a/public/item.html
+++ b/public/item.html
@@ -106,6 +106,10 @@
                         <li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>
                         <li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>
                         <li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_1.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>
                     </ul>
                     <div id="bhs_pd_ontline">
                         <table class="bhs_sale_table">
