--- a/public/footer.html
+++ b/public/footer.html
@@ -3,39 +3,39 @@
         <ul>
             <li>
                 <dl>
-                    <dt>New product information</dt>
-                    <dd><a href="#">New item of this month</a></dd>
-                    <dd><a href="#">New items since next month</a></dd>
+                    <dt>新商品情報</dt>
+                    <dd><a href="#">今月の新商品</a></dd>
+                    <dd><a href="#">来月以降の新商品</a></dd>
                 </dl>
             </li>
             <li>
                 <dl>
-                    <dt>GUNPLA</dt>
-                    <dd><a href="#">Search by brand</a></dd>
-                    <dd><a href="#">Search from works</a></dd>
-                    <dd><a href="#">What is Gundam?</a></dd>
+                    <dt>ガンプラ</dt>
+                    <dd><a href="#">ブランドから探す</a></dd>
+                    <dd><a href="#">作品から探す</a></dd>
+                    <dd><a href="#">ガンプラとは</a></dd>
                 </dl>
             </li>
             <li>
                 <dl>
-                    <dt>Character Plastic Model</dt>
-                    <dd><a href="#">Search by brand</a></dd>
-                    <dd><a href="#">Search from works</a></dd>
+                    <dt>キャラクタープラモデル</dt>
+                    <dd><a href="#">ブランドから探す</a></dd>
+                    <dd><a href="#">作品から探す</a></dd>
                 </dl>
             </li>
             <li>
                 <dl>
-                    <dd><a href="#">Event</a></dd>
-                    <dd><a href="#">campaign</a></dd>
-                    <dd><a href="#">Hobby Online Shop</a></dd>
+                    <dd><a href="#">イベント</a></dd>
+                    <dd><a href="#">キャンペーン</a></dd>
+                    <dd><a href="#">ホビーオンラインショップ</a></dd>
                 </dl>
             </li>
             <li>
                 <dl class="bhs_footer_boiler_mini">
-                    <dd><a href="#">Caution regarding tool handling</a></dd>
-                    <dd><a href="#">Parts mail order · Customer support</a></dd>
-                    <dd><a href="#">questionnaire</a></dd>
-                    <dd><a href="#">Notice</a></dd>
+                    <dd><a href="#">工具取扱に関する注意</a></dd>
+                    <dd><a href="#">部品通販・お客様サポート</a></dd>
+                    <dd><a href="#">アンケート</a></dd>
+                    <dd><a href="#">お知らせ</a></dd>
                 </dl>
             </li>
         </ul>
@@ -44,7 +44,7 @@
         <div class="bhs_footer_copy">
             <a href="#">
                 <img src="img/common/ft_logo.png">
-                <span>© BANDAI SPIRITS 1971-2018<br>We will refuse all images, sentences, data etc. posted on this homepage without permission and reprint. Unauthorized use or reproduction of materials contained in this page is strictly prohibited. </span>
+                <span>© BANDAI SPIRITS 1971-2018<br>このホームページに掲載されている全ての画像、文章、データなどの無断転用、転載をお断りします。Unauthorized use or reproduction of materials contained in this page is strictly prohibited. </span>
             </a>
         </div>
     </div>
