--- a/public/index.html
+++ b/public/index.html
@@ -203,13 +203,15 @@
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                 </ul>
-                <div class="bhs_side_btn_more"><a href="#"><span>MORE</span></a></div>
+                <div class="bhs_side_btn_more"><a href="#"><span>一覧を見る</span></a></div>
             </div>
             <div id="bhs_sideLink">
                 <ul>
-                    <li class="bhs_side_caution"><a href="#"><span>For tool handling Attention concerning</span></a></li>
-                    <li class="bhs_side_inquiry"><a href="#"><span>Part ordering · customer support</span></a></li>
-                    <li class="bhs_side_enquete"><a href="#"><span>questionnaire</span></a></li>
+                    <li class="bhs_side_caution"><a href="#"><span>工具取扱に
+関する注意</span></a></li>
+                    <li class="bhs_side_inquiry"><a href="#"><span>部品注文・
+お客様サポート</span></a></li>
+                    <li class="bhs_side_enquete"><a href="#"><span>アンケート</span></a></li>
                 </ul>
             </div>
         </div>
@@ -290,7 +292,7 @@
                         <!--</a>-->
                     <!--</li>-->
                 </ul>
-                <div class="bhs_main_btn_all"><a href="#"><span>View list</span></a></div>
+                <div class="bhs_main_btn_all"><a href="#"><span>一覧を見る</span></a></div>
             </div>
         </div>
         <div id="bhs_sideR">
