--- a/public/item.html
+++ b/public/item.html
@@ -81,9 +81,9 @@
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
-            <li class="home"><a href="index.html">home</a></li>
-            <li><a href="#">GUNPLA</a></li>
-            <li><a href="gunpla_hg_list.html">HG [High grade]</a></li>
+            <li class="home"><a href="index.html">ホーム</a></li>
+            <li><a href="#">ガンプラ</a></li>
+            <li><a href="gunpla_hg_list.html">HG［ハイグレード］</a></li>
             <li>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</li>
         </ul>
     </div>
@@ -114,13 +114,13 @@
                     <div id="bhs_pd_ontline">
                         <table class="bhs_sale_table">
                             <tbody>
-                            <tr><th>price</th>
+                            <tr><th>価格</th>
                                 <td>
-                                    <span>5,400 yen</span> (tax included)
+                                    <span id="hgprice">5,400 yen</span>（税込）
                                 </td>
                             </tr>
-                            <tr><th>Release date</th><td>August 2019</td></tr>
-                            <tr><th>Target age</th><td>Over 8 years old</td></tr>
+                            <tr><th>発売日</th><td id="uptime">August 2019</td></tr>
+                            <tr><th>対象年齢</th><td>8才以上</td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -131,12 +131,12 @@
                 </div>
                 <div class="bhs_sale_notice">
                     <ul>
-                        <li>&lt;Remarks&gt;</li>
-                        <li>The displayed price is the manufacturer suggested retail price (including tax of 8%) or premium Bandai selling price (including tax of 8%).</li>
-                        <li>※ Please understand that product photos and illustrations may differ slightly from actual products.</li>
-                        <li>※ Please understand that the product whose time has passed since the release may have ended production / sale.</li>
-                        <li>※ Product name, release date · price etc. Please note that information on this website may be subject to change.</li>
-                        <li>-Product specifications are planned as of May 2019. Please note that it may be changed.</li>
+                        <li>〈備考〉</li>
+                        <li>表示価格は、メーカー希望小売価格(税8%込)、もしくは、プレミアムバンダイ販売価格(税8%込)です。</li>
+                        <li>※商品の写真・イラストは実際の商品と一部異なる場合がございますのでご了承ください。</li>
+                        <li>※発売から時間の経過している商品は生産・販売が終了している場合がございますのでご了承ください。</li>
+                        <li>※商品名・発売日・価格などこのホームページの情報は変更になる場合がございますのでご了承ください。</li>
+                        <li>・商品仕様は2019年06月現在の予定です。変更の場合もございますがご了承ください。</li>
                     </ul>
                 </div>
             </div>
