--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
             <div id="bhs_side_gunpla">
                 <h3 class="bhs_title clearfix"><span>GUNPLA</span></h3>
                 <ul class="logoList">
-                    <li><a href="gunpla_hg_list.html" target="_blank"></a></li>
+                    <li><a href="gunpla_hg_list.html?page=1" target="_blank"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
