--- a/public/item.html
+++ b/public/item.html
@@ -83,8 +83,10 @@
         <ul>
             <li class="home"><a href="index.html">ホーム</a></li>
             <li><a href="#">ガンプラ</a></li>
-            <li><a href="gunpla_hg_list.html">HG［ハイグレード］</a></li>
-            <li>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</li>
+            <li><a href="gunpla_hg_list.html?page=1">HG［ハイグレード］</a></li>
+            <li>
+                <!--HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]-->
+            </li>
         </ul>
     </div>
 </div>
@@ -102,14 +104,10 @@
                         </div>
                     </div>
                     <ul id="bhs_gallery_thumbs" class="clearfix">
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_1.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_1.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>
-                        <li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>
+                        <!--<li><a href="#"><span><img src="img/hg/detail/detail_3244_1.jpg"></span></a></li>-->
+                        <!--<li><a href="#"><span><img src="img/hg/detail/detail_3244_2.jpg"></span></a></li>-->
+                        <!--<li><a href="#"><span><img src="img/hg/detail/detail_3244_3.jpg"></span></a></li>-->
+                        <!--<li><a href="#"><span><img src="img/hg/detail/detail_3244_4.jpg"></span></a></li>-->
                     </ul>
                     <div id="bhs_pd_ontline">
                         <table class="bhs_sale_table">
@@ -126,8 +124,8 @@
                     </div>
                 </div>
                 <div class="bhs_detail_explain">
-                    <p>From "Mobile Suit Gundam NT", the NT version Fenex (unicorn mode) has a gold coating, and the exterior appears in super luxurious plating specifications!<br>■ Stabilizer connected to Armed Armor DE is movable every block.<br>■ Characteristic armament of unicorn Gundam is attached.<br><br>[INCLUDED ACCESSORIES]<br>■ Shield × 1<br>■ Armed Armor DE × 2<br>■ Hyper · Bazooka × 1<br>■ Beam saber blade × 2<br><br>[CONTENTS]<br>■ Molded item × 10<br>■ foil seal × 1<br>■ Instruction manual x 1<br>
-                    </p>
+                    <!--<p>From "Mobile Suit Gundam NT", the NT version Fenex (unicorn mode) has a gold coating, and the exterior appears in super luxurious plating specifications!<br>■ Stabilizer connected to Armed Armor DE is movable every block.<br>■ Characteristic armament of unicorn Gundam is attached.<br><br>[INCLUDED ACCESSORIES]<br>■ Shield × 1<br>■ Armed Armor DE × 2<br>■ Hyper · Bazooka × 1<br>■ Beam saber blade × 2<br><br>[CONTENTS]<br>■ Molded item × 10<br>■ foil seal × 1<br>■ Instruction manual x 1<br>-->
+                    <!--</p>-->
                 </div>
                 <div class="bhs_sale_notice">
                     <ul>
@@ -136,7 +134,7 @@
                         <li>※商品の写真・イラストは実際の商品と一部異なる場合がございますのでご了承ください。</li>
                         <li>※発売から時間の経過している商品は生産・販売が終了している場合がございますのでご了承ください。</li>
                         <li>※商品名・発売日・価格などこのホームページの情報は変更になる場合がございますのでご了承ください。</li>
-                        <li>・商品仕様は2019年06月現在の予定です。変更の場合もございますがご了承ください。</li>
+                        <li>・商品仕様は現在の予定です。変更の場合もございますがご了承ください。</li>
                     </ul>
                 </div>
             </div>
