--- a/public/gunpla_hg_list.html
+++ b/public/gunpla_hg_list.html
@@ -81,8 +81,8 @@
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
-            <li class="home"><a href="index.html">home</a></li>
-            <li><a href="#">GUNPLA</a></li>
+            <li class="home"><a href="index.html">ホーム</a></li>
+            <li><a href="#">ガンプラ</a></li>
             <li>HG［ハイグレード］</li>
         </ul>
     </div>
@@ -183,13 +183,13 @@
                 </div>
                 <h2 class="bhs_main_title"><span>HG［ハイグレード］ 商品一覧</span></h2>
                 <ul class="pnav clearfix">
-                    <li class="prev"><a href="#">‹ 前へ</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><span>2</span></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="next"><a href="#">次へ ›</a></li>
+                    <!--<li class="prev"><a href="#">‹ 前へ</a></li>-->
+                    <!--<li><a href="#">1</a></li>-->
+                    <!--<li><span>2</span></li>-->
+                    <!--<li><a href="#">3</a></li>-->
+                    <!--<li><a href="#">4</a></li>-->
+                    <!--<li><a href="#">5</a></li>-->
+                    <!--<li class="next"><a href="#">次へ ›</a></li>-->
                 </ul>
                 <ol class="bhs_pdlist_sbs">
                     <!--<li>-->
@@ -301,13 +301,13 @@
                     <!--</li>-->
                 </ol>
                 <ul class="pnav clearfix">
-                    <li class="prev"><a href="#">‹ 前へ</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><span>2</span></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="next"><a href="#">次へ ›</a></li>
+                    <!--<li class="prev"><a href="#">‹ 前へ</a></li>-->
+                    <!--<li><a href="#">1</a></li>-->
+                    <!--<li><span>2</span></li>-->
+                    <!--<li><a href="#">3</a></li>-->
+                    <!--<li><a href="#">4</a></li>-->
+                    <!--<li><a href="#">5</a></li>-->
+                    <!--<li class="next"><a href="#">次へ ›</a></li>-->
                 </ul>
             </div>
         </div>
