--- a/public/index.html
+++ b/public/index.html
@@ -397,5 +397,6 @@
 <script src="js/hbs_js.js"></script>
 <script src="js/hbs_check.js"></script>
 <script src="js/hbs_index.js"></script>
+<script src="js/mouseenter.js"></script>
 </body>
 </html>
