--- a/public/item.html
+++ b/public/item.html
@@ -241,5 +241,6 @@
 <script src="js/hbs_js.js"></script>
 <script src="js/hbs_check.js"></script>
 <script src="js/hbs_item.js"></script>
+<script src="js/mouseenter.js"></script>
 </body>
 </html>
