--- a/public/gunpla_hg_list.html
+++ b/public/gunpla_hg_list.html
@@ -106,20 +106,20 @@
                         <tr>
                             <td style="padding-top: 2px;" colspan="2"><span style="font-size: 10pt;"><strong>▲</strong></span><span style="font-size: 10pt;"><strong>劇中に登場した1/144スケールMS(別売り)を搭載可能。</strong></span></td>
                         </tr>
-                        <tr>
-                            <td><a href="#"><img src="img/hg/banner/hg_banner2.jpg" width="100%"></a></td>
-                            <td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>
-                        </tr>
-                        <tr>
-                            <td style="padding-top: 2px;" colspan="2"><span style="font-size: 10pt;"><strong>▲</strong></span><span style="font-size: 10pt;"><strong>マグアナック隊がＨＧマグアナックのバリエーションキットで登場！</strong></span></td>
-                        </tr>
-                        <tr>
-                            <td><a href="#"><img src="img/hg/banner/hg_banner3.jpg" width="100%"></a></td>
-                            <td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>
-                        </tr>
-                        <tr>
-                            <td style="padding-top: 2px;" colspan="2"><span style="font-size: 10pt;"><strong>▲</strong></span><span style="font-size: 10pt;"><strong>パーツの組み合わせにより、様々なマグアナックを再現可能な36体セット！</strong></span></td>
-                        </tr>
+                        <!--<tr>-->
+                            <!--<td><a href="#"><img src="img/hg/banner/hg_banner2.jpg" width="100%"></a></td>-->
+                            <!--<td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td style="padding-top: 2px;" colspan="2"><span style="font-size: 10pt;"><strong>▲</strong></span><span style="font-size: 10pt;"><strong>マグアナック隊がＨＧマグアナックのバリエーションキットで登場！</strong></span></td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td><a href="#"><img src="img/hg/banner/hg_banner3.jpg" width="100%"></a></td>-->
+                            <!--<td style="background-color: #000000;"><img src="img/common/pb_onlineshop.png" width="120"></td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td style="padding-top: 2px;" colspan="2"><span style="font-size: 10pt;"><strong>▲</strong></span><span style="font-size: 10pt;"><strong>パーツの組み合わせにより、様々なマグアナックを再現可能な36体セット！</strong></span></td>-->
+                        <!--</tr>-->
                     </tbody>
                 </table>
                 <div id="bhs_searchForm">
@@ -413,5 +413,6 @@
 <script src="js/hbs_js.js"></script>
 <script src="js/hbs_check.js"></script>
 <script src="js/hbs_hglist.js"></script>
+<script src="js/mouseenter.js"></script>
 </body>
 </html>
